# Circuitpython_Waveshare_LCD1602

./: README.rst  README.rst.license  RGB1602.py  circuitpython_rgb1602.py  pyproject.toml  ruff.toml  setup.py  waveshare_lcd1602.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: Choose_Color.py  Discoloration.py  rgb1602_simpletest.py  waveshare_lcd1602_simpletest.py
