# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Neradoc
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-waveshare-lcd1602"
description = "Driver for Waveshare's I2C RGB character display LCD1602"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Neradoc", email = "neraOnGit@ri1.fr"}
]
urls = {Homepage = "https://github.com/Neradoc/Circuitpython_Waveshare_LCD1602"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "waveshare_lcd1602",
    "lcd1602",
    "waveshare",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["waveshare_lcd1602"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
